[project]
name = "pious"
version = "0.0.0.dev15"
authors = [{ name = "Ben Kushigian", email = "bkushigian@gmail.com" }]
description = "The PioSOLVER Utility Suite"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0.0",
    "matplotlib>=3.7.1",
    "pandas>=2.0.3",
    "mplcursors>=0.5.1",
    "ansi>=0.3.7",
    "pytest>=8.2.2",
    "tabulate>=0.9.0",
]

[project.scripts]
pious = "pious.__main__:main"

[project.urls]
Issues = "https://github.com/bkushigian/Pious/issues"
Homepage = "https://github.com/bkushigian/Pious"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
